--- a/Notes/Notes.csproj
+++ b/Notes/Notes.csproj
@@ -26,8 +26,7 @@
     <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
     <AppxPackageDir>C:\Users\black\Downloads\notes\Canary\2\</AppxPackageDir>
     <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
-    <PackageCertificateThumbprint>
-    </PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>6A03C82D567B725E4B0954CF9066BB738E40DC06</PackageCertificateThumbprint>
     <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
     <AppInstallerUri>https://github.com/BlkDev9/Notes/releases</AppInstallerUri>
     <PackageCertificateKeyFile>Notes_TemporaryKey.pfx</PackageCertificateKeyFile>
@@ -292,12 +291,13 @@
     <PRIResource Include="Strings\en-US\Resources.resw" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Notes_TemporaryKey.pfx" />
     <PRIResource Include="Strings\en-US\Welcome.resw" />
     <PRIResource Include="Strings\en-US\Ataglance.resw" />
     <PRIResource Include="Strings\en-US\About.resw" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Notes_TemporaryKey.pfx" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
